# MediaFoundationSample

./: CMakeLists.txt  README.md
CustomSession/: CMakeLists.txt  customplayer.cpp  customplayer.h  customplayer.rc  winmain.cpp
CustomVideoRenderer/: CMakeLists.txt  CustomVideoRenderer.cpp  CustomVideoRenderer.def  CustomVideoRenderer.h
MediaSessionPlaybackExample/: CMakeLists.txt  player.cpp  player.h  resource.h  winmain.cpp
